Adding RequestTimeMiddleware, User and Role classes

--- a/Projekt Web API/Papu/Papu/nlog.config
+++ b/Projekt Web API/Papu/Papu/nlog.config
@@ -12,6 +12,9 @@
 		layout czyli sposób w jaki informacje będą zapisywane do pliku
 		name to nazwa pliku-->
 	<targets>
+		<target xsi:type="File" name="request-time" fileName="G:\Studia\Aplikacja dla dietetyków\request-time.log"
+				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+		
 		<target xsi:type="File" name="exceptions" fileName="G:\Studia\Aplikacja dla dietetyków\nlog-all-exceptions${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 		
@@ -31,5 +34,6 @@
 		<logger name="*" minlevel="Trace" writeTo="allfile" />
 		<!--Wyłapujemy tylko te informacje z klas, które są w mainspace Papu -->
 		<logger name="Papu.*" minlevel="Error" writeTo="exceptions" />
+		<logger name="Papu.Middleware.RequestTimeMiddleware" minlevel="Trace" writeTo="request-time" />
 	</rules>
 </nlog>
