--- a/Projekt Web API/Papu/Papu/appsettings.json
+++ b/Projekt Web API/Papu/Papu/appsettings.json
@@ -2,13 +2,18 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Papu-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtExpireDays": 15,
+    "JwtIssuer": "http://papuapi.com"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
   "IdentityServer": {
     "Clients": {
       "Papu": {
@@ -16,5 +21,5 @@
       }
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
