--- a/Projekt Web API/Papu/Papu/ClientApp/tsconfig.json
+++ b/Projekt Web API/Papu/Papu/ClientApp/tsconfig.json
@@ -14,8 +14,11 @@
       "node_modules/@types"
     ],
     "lib": [
-      "es2017",
+      "es2015",
       "dom"
     ]
+  },
+  "angularCompilerOptions": {
+    "strictMetadataEmit": true
   }
 }
