Test create methods part 2

--- a/Projekt Web API/Papu/Papu/appsettings.Development.json
+++ b/Projekt Web API/Papu/Papu/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PapuDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PapuDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
