Angular part 2 - cache

--- a/Projekt Web API/Papu/Papu/appsettings.json
+++ b/Projekt Web API/Papu/Papu/appsettings.json
@@ -21,5 +21,12 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "StaticFiles": {
+    "Headers": {
+      "CacheControl": "max-age=3600",
+      "Pragma": "cache",
+      "Expires": null
+    }
+  }
 }
