--- a/Projekt Web API/Papu/Papu/appsettings.Development.json
+++ b/Projekt Web API/Papu/Papu/appsettings.Development.json
@@ -13,5 +13,12 @@
     "Key": {
       "Type": "Development"
     }
+  },
+  "StaticFiles": {
+    "Headers": {
+      "CacheControl": "no-cache, no-store",
+      "Pragma": "no-cache",
+      "Expires": "-1"
+    }
   }
 }
