--- a/Projekt Web API/Papu/Papu/appsettings.Development.json
+++ b/Projekt Web API/Papu/Papu/appsettings.Development.json
@@ -14,6 +14,7 @@
       "Type": "Development"
     }
   },
+  "AllowedHosts": "*",
   "StaticFiles": {
     "Headers": {
       "CacheControl": "no-cache, no-store",
