--- a/Projekt Web API/Papu/Papu/Papu.csproj
+++ b/Projekt Web API/Papu/Papu/Papu.csproj
@@ -46,6 +46,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\products\categories.service.spec.ts" />
+    <None Remove="ClientApp\src\app\products\categories.service.ts" />
+    <None Remove="ClientApp\src\app\products\category.ts" />
+    <None Remove="ClientApp\src\app\products\unit.ts" />
+    <None Remove="ClientApp\src\app\products\units.service.spec.ts" />
+    <None Remove="ClientApp\src\app\products\units.service.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Remove="ClientApp\src\app\products\create\create.component.ts" />
+    <TypeScriptCompile Remove="ClientApp\src\app\products\details\details.component.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\products\list\list.component.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\products\list\product.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\products\products-routing.module.ts" />
