Login and register part 3

--- a/Projekt Web API/Papu/Papu/Papu.csproj
+++ b/Projekt Web API/Papu/Papu/Papu.csproj
@@ -56,6 +56,8 @@
     <None Remove="ClientApp\src\app\products\unit.ts" />
     <None Remove="ClientApp\src\app\products\units.service.spec.ts" />
     <None Remove="ClientApp\src\app\products\units.service.ts" />
+    <None Remove="ClientApp\src\app\register\nationalities.service.spec.ts" />
+    <None Remove="ClientApp\src\app\register\nationalities.service.ts" />
     <None Remove="ClientApp\src\app\register\register.component.spec.ts" />
     <None Remove="ClientApp\src\app\register\register.component.ts" />
     <None Remove="ClientApp\src\app\services\auth.service.spec.ts" />
