--- a/Projekt Web API/Papu/Papu/ClientApp/package.json
+++ b/Projekt Web API/Papu/Papu/ClientApp/package.json
@@ -17,14 +17,17 @@
     "@angular/compiler": "9.0.0",
     "@angular/core": "9.0.0",
     "@angular/forms": "9.0.0",
+    "@angular/material": "^13.3.5",
     "@angular/platform-browser": "9.0.0",
     "@angular/platform-browser-dynamic": "9.0.0",
     "@angular/platform-server": "9.0.0",
     "@angular/router": "9.0.0",
     "@nguniversal/module-map-ngfactory-loader": "9.0.0-next.9",
+    "@syncfusion/ej2-angular-calendars": "^20.1.47",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.6.1",
     "core-js": "3.6.1",
+    "igniteui-angular": "^13.1.12",
     "jquery": "^3.5.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
