--- a/Projekt Web API/Papu/Papu/ClientApp/package.json
+++ b/Projekt Web API/Papu/Papu/ClientApp/package.json
@@ -22,8 +22,8 @@
     "@angular/platform-browser-dynamic": "9.0.0",
     "@angular/platform-server": "9.0.0",
     "@angular/router": "9.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@nguniversal/module-map-ngfactory-loader": "9.0.0-next.9",
-    "@syncfusion/ej2-angular-calendars": "^20.1.47",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.6.1",
     "core-js": "3.6.1",
