--- a/Projekt Web API/Papu/Papu/Papu.csproj
+++ b/Projekt Web API/Papu/Papu/Papu.csproj
@@ -64,6 +64,8 @@
     <None Remove="ClientApp\src\app\services\auth-guard.service.ts" />
     <None Remove="ClientApp\src\app\services\auth.service.spec.ts" />
     <None Remove="ClientApp\src\app\services\auth.service.ts" />
+    <None Remove="ClientApp\src\app\services\token-interceptor.service.spec.ts" />
+    <None Remove="ClientApp\src\app\services\token-interceptor.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
