--- a/Projekt Web API/Papu/Papu/ClientApp/package.json
+++ b/Projekt Web API/Papu/Papu/ClientApp/package.json
@@ -24,14 +24,21 @@
     "@angular/router": "9.0.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@nguniversal/module-map-ngfactory-loader": "9.0.0-next.9",
+    "animations": "0.0.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.6.1",
+    "common": "^0.2.5",
     "core-js": "3.6.1",
+    "forms": "^1.3.2",
     "igniteui-angular": "^13.1.12",
     "jquery": "^3.5.1",
+    "material": "^0.4.3",
+    "ngx-pagination": "^5.1.1",
     "oidc-client": "^1.9.1",
+    "platform-browser": "0.0.1-security",
     "popper.js": "^1.16.0",
     "rxjs": "6.5.4",
+    "tslib": "^1.10.0",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
