--- a/Projekt Web API/Papu/Papu/ClientApp/tsconfig.json
+++ b/Projekt Web API/Papu/Papu/ClientApp/tsconfig.json
@@ -19,6 +19,7 @@
     ]
   },
   "angularCompilerOptions": {
-    "strictMetadataEmit": true
+    "strictMetadataEmit": true,
+    "enableIvy": false
   }
 }
