--- a/Projekt Web API/Papu/Papu/ClientApp/package.json
+++ b/Projekt Web API/Papu/Papu/ClientApp/package.json
@@ -29,12 +29,16 @@
     "bootstrap": "^4.6.1",
     "common": "^0.2.5",
     "core-js": "3.6.1",
+    "font-awesome": "^4.7.0",
     "forms": "^1.3.2",
     "igniteui-angular": "^13.1.12",
     "jquery": "^3.5.1",
     "material": "^0.4.3",
+    "ng2-order-pipe": "^0.1.5",
+    "ngx-order-pipe": "^2.2.0",
     "ngx-pagination": "^5.1.1",
     "oidc-client": "^1.9.1",
+    "orderby": "^1.1.0",
     "platform-browser": "0.0.1-security",
     "popper.js": "^1.16.0",
     "rxjs": "6.5.4",
