Creating the KindOfDto and TypeDto model, changing the namespaces UpdateDishDto, UpdateMenuDto, CategoryService, GroupService, UnitService, DishService and IDishService. Creating IKindOfService and ITypeService interface, KindOfService and TypeService

--- a/Projekt Web API/Papu/Papu/Papu.csproj
+++ b/Projekt Web API/Papu/Papu/Papu.csproj
@@ -47,6 +47,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\dishes\dish.ts" />
+    <None Remove="ClientApp\src\app\dishes\kindOf.ts" />
+    <None Remove="ClientApp\src\app\dishes\type.ts" />
     <None Remove="ClientApp\src\app\login\login.component.spec.ts" />
     <None Remove="ClientApp\src\app\login\login.component.ts" />
     <None Remove="ClientApp\src\app\products\categories.service.spec.ts" />
