--- a/Projekt Web API/Papu/Papu/ClientApp/package.json
+++ b/Projekt Web API/Papu/Papu/ClientApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "echo Starting... && ng serve",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && ng serve ",
     "build": "ng build",
     "build:ssr": "ng run Papu:server:dev",
     "test": "ng test",
